plugins {
    id 'java'
    id 'war'
}

group 'de.dhbw'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.13.2'
    hibernateVersion = '7.0.4.Final'
    lombokVersion = '1.18.46'
    tomeeVersion = '10.1.5'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

sourceSets {
    devServer {
        java.srcDirs = ['src/devServer/java']
    }
}

dependencies {
    compileOnly("org.projectlombok:lombok:${lombokVersion}")
    annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
    testCompileOnly("org.projectlombok:lombok:${lombokVersion}")
    testAnnotationProcessor("org.projectlombok:lombok:${lombokVersion}")

    // Jakarta EE APIs provided by TomEE at runtime. Listed individually because
    // TomEE's jakartaee-api uber jar pins JPA 3.1, but Hibernate 7 needs JPA 3.2.
    compileOnly('jakarta.servlet:jakarta.servlet-api:6.0.0')
    compileOnly('jakarta.servlet.jsp:jakarta.servlet.jsp-api:3.1.1')
    compileOnly('jakarta.enterprise:jakarta.enterprise.cdi-api:4.0.1')
    compileOnly('jakarta.transaction:jakarta.transaction-api:2.0.1')
    compileOnly('jakarta.ws.rs:jakarta.ws.rs-api:3.1.0')
    compileOnly('jakarta.annotation:jakarta.annotation-api:2.1.1')
    implementation('jakarta.data:jakarta.data-api:1.0.1')
    implementation('jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0')
    implementation('org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.1')

    // JPA provider: Hibernate lives on the TomEE container classpath (mirrors
    // apache-tomee/lib/) so the openejb→hibernate JTA bridge can reach it.
    // Keep it compileOnly for our code so it's not packaged into WEB-INF/lib.
    compileOnly("org.hibernate.orm:hibernate-core:${hibernateVersion}")
    annotationProcessor("org.hibernate.orm:hibernate-processor:${hibernateVersion}")
    implementation('com.h2database:h2:2.3.232')
    implementation('at.favre.lib:bcrypt:0.10.2')

    // Embedded TomEE dev runner (Web Profile: Servlet, JSP, CDI/OpenWebBeans,
    // JTA, JPA, JAX-RS, Bean Validation).
    // Container-side classpath (analogous to apache-tomee/lib/):
    //   - H2 for the container-managed DataSource
    //   - Hibernate as the JPA provider TomEE will load for the webapp
    //   - openejb-jpa-integration bridges Hibernate ↔ TomEE TransactionManager
    devServerImplementation('com.h2database:h2:2.3.232')
    devServerImplementation("org.hibernate.orm:hibernate-core:${hibernateVersion}")
    devServerImplementation("org.apache.tomee:openejb-jpa-integration:${tomeeVersion}")
    devServerImplementation("org.apache.tomee:tomee-embedded:${tomeeVersion}") {
        // SOAP/SAML — not needed; pulls opensaml jars not on Maven Central.
        exclude group: 'org.apache.tomee', module: 'tomee-webservices'
    }

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testImplementation('jakarta.enterprise:jakarta.enterprise.cdi-api:4.0.1')
    testImplementation('jakarta.transaction:jakarta.transaction-api:2.0.1')
    testImplementation("org.hibernate.orm:hibernate-core:${hibernateVersion}")
    testImplementation('org.mockito:mockito-core:5.14.2')
    testImplementation('org.mockito:mockito-junit-jupiter:5.14.2')
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    testRuntimeOnly('org.junit.platform:junit-platform-launcher')
}

tasks.register('run', JavaExec) {
    group = 'application'
    description = 'Run the application against the built war using embedded TomEE'
    dependsOn 'war'
    mainClass = 'de.dhbw.erpbackend.devserver.DevServer'
    classpath = sourceSets.devServer.runtimeClasspath + sourceSets.devServer.output
    systemProperty 'war.path', tasks.war.archiveFile.get().asFile.absolutePath
    systemProperty 'server.port', System.getenv().getOrDefault('SERVER_PORT', '8080')
}

test {
    useJUnitPlatform()
}
